--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,26 @@ body {
     width: 460px;
     margin: 0 auto;
 }
+
+ul.photo-list{
+    list-style: none;
+}
+
+.photo-list h2{
+    font-size: 12px;
+    margin: 4px 10px;
+}
+
+.photo-list li{
+    float: left;
+    margin: 10px;
+    background: #eee;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.photo-list li img{
+    height: 40px;
+    width: 60px;
+    margin: 10px;
+}
